--- a/index.html
+++ b/index.html
@@ -4,24 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RecipeJS - Your Functional Cooking Companion</title>
-    <!-- Link your CSS file here -->
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- Header section -->
     <header>
         <h1>🍳 RecipeJS</h1>
         <p>Your Functional Cooking Companion</p>
     </header>
     
-    <!-- Main section -->
     <main>
+        <section class="controls">
+            <div class="filters">
+                <button data-filter="all">All Recipes</button>
+                <button data-filter="easy">Easy Recipes</button>
+                <button data-filter="medium">Medium Recipes</button>
+                <button data-filter="hard">Hard Recipes</button>
+                <button data-filter="quick">Quick Recipes (&lt; 30 min)</button>
+            </div>
+            <div class="sorters">
+                <button data-sort="name">Sort: Name (A–Z)</button>
+                <button data-sort="time">Sort: Time (Fastest First)</button>
+            </div>
+        </section>
+
         <div id="recipe-container">
             <!-- Recipe cards will be rendered here by JavaScript -->
         </div>
     </main>
     
-    <!-- Link your JavaScript file here -->
     <script src="app.js"></script>
 </body>
 </html>
